--- a/_config.yml
+++ b/_config.yml
@@ -2,3 +2,4 @@ theme: minima
 title: Simple Salesforce
 author: Tom Rook
 description: Join Tom on his adevnture to create simple salesforce
+remote_theme: pages-themes/minimal@v0.2.0
