--- a/_config.yml
+++ b/_config.yml
@@ -3,3 +3,5 @@ title: Simple Salesforce
 author: Tom Rook
 description: Join Tom on his adevnture to create simple salesforce
 remote_theme: pages-themes/minimal@v0.2.0
+plugins:
+- jekyll-remote-theme
