--- a/_config.yml
+++ b/_config.yml
@@ -1,6 +1,6 @@
 title: Simple Salesforce
 author: Tom Rook
-logo: /assets/images/logo.jpg
+logo: /assets/images/logo.png
 description: Join Tom on his adevnture to create simple salesforce
 remote_theme: pages-themes/minimal@v0.2.0
 plugins:
