--- a/_config.yml
+++ b/_config.yml
@@ -1,7 +1,7 @@
 title: Simple Salesforce
 author: Tom Rook
 logo: /assets/images/logo.png
-description: Join Tom on his adevnture to create simple salesforce
+description: Join Tom on his adevntures across the Salesforce ecosystem
 remote_theme: pages-themes/minimal@v0.2.0
 plugins:
 - jekyll-remote-theme
