--- a/_config.yml
+++ b/_config.yml
@@ -5,3 +5,5 @@ description: Join Tom on his adevntures across the Salesforce ecosystem
 remote_theme: pages-themes/minimal@v0.2.0
 plugins:
 - jekyll-remote-theme
+collections:
+  authors:
