--- a/_config.yml
+++ b/_config.yml
@@ -7,3 +7,20 @@ plugins:
 - jekyll-remote-theme
 collections:
   authors:
+    output: true
+
+defaults:
+  - scope:
+      path: ""
+      type: "authors"
+    values:
+      layout: "author"
+  - scope:
+      path: ""
+      type: "posts"
+    values:
+      layout: "post"
+  - scope:
+      path: ""
+    values:
+      layout: "default"
