--- a/_config.yml
+++ b/_config.yml
@@ -8,3 +8,19 @@ plugins:
 collections:
   authors:
     output: true
+
+defaults:
+  - scope:
+      path: ""
+      type: "authors"
+    values:
+      layout: "author"
+  - scope:
+      path: ""
+      type: "posts"
+    values:
+      layout: "post"
+  - scope:
+      path: ""
+    values:
+      layout: "default"
