--- a/_config.yml
+++ b/_config.yml
@@ -1,4 +1,4 @@
-title: Simple Salesforce
+title: Tom Rook
 author: Tom Rook
 logo: /assets/images/logo.png
 description: Join Tom on his adevntures across the Salesforce ecosystem
